feat: redesign the login page with a modern user interface and improved visual elements.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PaperTerrace</title>
+    <title>
+      PaperTerrace - Read papers casually, like sitting on a terrace
+    </title>
+    <meta
+      name="description"
+      content="PaperTerrace is a modern academic paper reading platform that makes complex research papers accessible and casual."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!--__FIREBASE_CONFIG__-->
   </head>
   <body>
