--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      PaperTerrace - Read papers casually, like sitting on a terrace
+      PaperTerrace (Dev) - Read papers casually, like sitting on a terrace
     </title>
     <meta
       name="description"
